--- a/html/about.html
+++ b/html/about.html
@@ -2,26 +2,73 @@
 <html>
 	<head>
 		<title> Internal Styles </title>
+		<style>
+
+		ul {
+			height: 30px;
+			float:center;
+			width: 100%;
+		}
+		li {
+			background-color: beige;
+	    border:1px solid black;
+			width: 30%;
+			text-align:center;
+			display:block;
+
+		}
+		div {
+		  	width:90%;
+		  	margin: auto 2em;
+		}
+    h1 {
+	     font-family: serif;color:#ffffff;
+     }
+		 .bio {
+			 background-color: #ff6200;
+			 border: 3px #000 solid;
+			 margin-right: auto 2em;
+			 margin-left: auto 2em;
+			 width: 30%;
+			 float:left;
+			 height: 400px;
+		 }
+
+		</style>
 	</head>
-	<body>
+	<body style="background-color:#1a0a00">
 		<!-- Let's fill in some things -->
-		<nav style="margin-top: 0px; width: 100%; height: 3em;">
-	    <ul style="height: 30px; float: left; width: 100%; text-decoration: none; display: block; list-style: none;">
-	      <li style="background-color: beige; padding: 10px; border: 1px solid black; width: 45%; text-align:center; margin: auto 5px; display:block; float: left;"><a href="/">Home</a></li>
-	      <li style="background-color: beige; padding: 10px; border: 1px solid black; width: 45%; text-align:center; margin: auto 5px; display:block; float: left;"><a href="/about">About</a></li>
+		<nav style="margin-top: 0px;margin-right: auto 2em;margin-left: auto 2em;width: 30%;height: 3em;">
+	    <ul>
+	      <li><a href="/">HOME</a></li>
+	      <li><a href="/about">TEST INFO</a></li>
+
 	    </ul>
 	  </nav>
 
-    <div id="content" style="width:90%; margin: auto 2em; ">
-      <h1 style="font-family: serif;">I am going to tell you a little about me...</h1>
-      <article class="bio" style="background-color: #AAA; border: 3px #000 solid; width: 30%; float:left; height: 400px;">
+
+			<li><a href="http://www.actstudent.org/">ACT</a></li>
+			<li><a href="http://www.actstudent.org/">GMAT</a></li>
+			<li><a href="http://www.actstudent.org/">GRE</a></li>
+
+
+
+    <div id="content">
+      <h1>I am going to tell you a little about Test</h1>
+      <article class="bio">
+				<h1>GMAT</h1>
         Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.
       </article>
-      <article class="misc" style="background-color: #FFC; margin-left: 35%; padding: 10px; ">
-        <p>Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.</p>
-        <p>Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.</p>
-        <p>Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.</p>
+			<article class="bio">
+				<h1>GRE</h1>
+        Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.
       </article>
+			<article class="bio">
+				<h1>ACT</h1>
+        Bacon ipsum dolor amet meatloaf t-bone ball tip strip steak porchetta prosciutto frankfurter chuck spare ribs short ribs pork chop beef ribs. Boudin strip steak chuck ham hock. Sausage kevin biltong andouille cupim, short ribs ham. Sausage hamburger flank chicken, spare ribs turkey andouille meatball doner kielbasa.
+      </article>
+
+		</div>
     </div>
 	</body>
 </html>
