--- a/html/index.html
+++ b/html/index.html
@@ -2,18 +2,49 @@
 <html>
 	<head>
 		<title> Internal Styles </title>
+		<style>
+		nav {
+			margin-top: 0px;
+			margin-right: auto 2em;
+			margin-left: auto; 2em;
+			width: 30%;
+			height: 3em;
+		}
+		ul {
+			height: 30px;
+			float: left;
+			width: 100%;
+		}
+		li {
+			background-color: beige;
+			padding: 10px;
+			border: 1px solid black;
+			width: 45%;
+			text-align: center;
+			margin: auto 5px;
+			display:block;
+			float: left;
+		}
+		div {
+			width: 90%;
+			margin: auto 2em;
+		}
+		h1 {
+			font-family: serif;
+		}
+		</style>
 	</head>
 	<body>
 		<!-- Let's fill in some things -->
-		<nav style="margin-top: 0px; width: 100%; height: 3em;">
-	    <ul style="height: 30px; float: left; width: 100%; text-decoration: none; display: block; list-style: none;">
-	      <li style="background-color: beige; padding: 10px; border: 1px solid black; width: 45%; text-align:center; margin: auto 5px; display:block; float: left;"><a href="/">Home</a></li>
-	      <li style="background-color: beige; padding: 10px; border: 1px solid black; width: 45%; text-align:center; margin: auto 5px; display:block; float: left;"><a href="/about">About</a></li>
+		<nav>
+	    <ul>
+	      <li><a href="/">HOME</a></li>
+	      <li><a href="/about">TEST INFO</a></li>
 	    </ul>
 	  </nav>
-
-    <div id="content" style="width:90%; margin: auto 2em; ">
-      <h1 style="font-family: serif;">This is your home!</h1>
+    <div id="content">
+      <h1>Prepare for the test</h1>
+			<img src="http://www.planwallpaper.com/static/images/518079-background-hd.jpg",alt="background">
 			<!-- Your content goes hear. -->
 
     </div>
